--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "skynet"]
 	path = skynet
 	url = https://github.com/cloudwu/skynet.git
+[submodule "luaclib-src/lua-cjson"]
+	path = luaclib-src/lua-cjson
+	url = https://github.com/mpx/lua-cjson.git
