--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "luaclib-src/lua-cjson"]
 	path = luaclib-src/lua-cjson
 	url = https://github.com/mpx/lua-cjson.git
+[submodule "luaclib-src/lua-protobuf"]
+	path = luaclib-src/lua-protobuf
+	url = https://github.com/starwing/lua-protobuf
